# Anthropomorphic-Arm

./: CMakeLists.txt  README.md
docker/: Dockerfile
launch/: interface.launch.py  sim.launch.py
src/: detection.cc  gripper_service.cpp  inverse_kin.cpp  position.cc  publish_trajectory_node.cpp
